--- a/nlp/hw/2/HWK2.ipynb
+++ b/nlp/hw/2/HWK2.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "import hidden.hw2_util as util\n",
-    "DIR = util._dir()\n"
+    "DIR = util._dir()"
    ]
   },
   {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "id": "xwD2htUoSStw"
    },
@@ -201,17 +201,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(f'{DIR}\\n')\n",
-    "\n",
-    "# pprint.pprint(nltk.data.path)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "hVLquFhjSStx"
@@ -222,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "id": "mC7B9Cb-SSty"
    },
@@ -288,28 +277,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "id": "NjJABbVFSSt1"
    },
    "outputs": [],
    "source": [
-    "def distinct_words(corpus):\n",
-    "    \"\"\" Determine a list of distinct words for the corpus.\n",
-    "        Params:\n",
-    "            corpus (list of list of strings): corpus of documents\n",
-    "        Return:\n",
-    "            corpus_words (list of strings): sorted list of distinct words across the corpus\n",
-    "            n_corpus_words (integer): number of distinct words across the corpus\n",
-    "    \"\"\"\n",
-    "    corpus_words = []\n",
-    "    n_corpus_words = -1\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    IMPLEMENT ME!\n",
-    "    \"\"\"\n",
+    "def distinct_words(corpus: list[list[str]]) -> tuple[list[str], int]:\n",
+    "    \"\"\" \n",
+    "    Determine a list of distinct words for the corpus.\n",
     "\n",
-    "    return corpus_words, n_corpus_words"
+    "    Params:\n",
+    "\n",
+    "        corpus (list of list of strings): corpus of documents\n",
+    "\n",
+    "    Return:\n",
+    "\n",
+    "        corpus_words (list of strings): sorted list of distinct words across the corpus\n",
+    "        n_corpus_words (integer): number of distinct words across the corpus\n",
+    "    \"\"\"\n",
+    "    import numpy as np\n",
+    "    \n",
+    "    # NOTE: numpy.unique flattens (if axis = None) and sorts innately\n",
+    "    w = np.unique(ar = corpus, axis = None)\n",
+    "    return list(w), len(w)"
    ]
   },
   {
@@ -364,42 +355,104 @@
    },
    "outputs": [],
    "source": [
-    "def compute_co_occurrence_matrix(corpus, window_size=4):\n",
-    "    \"\"\" Compute co-occurrence matrix for the given corpus and window_size (default of 4).\n",
+    "def compute_co_occurrence_matrix(corpus: list[list[str]], window_size: int = 4):\n",
+    "    \"\"\" \n",
+    "    Compute co-occurrence matrix for the given corpus and window_size (default of 4).\n",
     "    \n",
-    "        Note: Each word in a document should be at the center of a window. Words near edges will have a smaller\n",
-    "              number of co-occurring words.\n",
-    "              \n",
-    "              For example, if we take the document \"<START> All that glitters is not gold <END>\" with window size of 4,\n",
-    "              \"All\" will co-occur with \"<START>\", \"that\", \"glitters\", \"is\", and \"not\".\n",
-    "    \n",
-    "        Params:\n",
-    "            corpus (list of list of strings): corpus of documents\n",
-    "            window_size (int): size of context window\n",
-    "        Return:\n",
-    "            M (a symmetric numpy matrix of shape (number of unique words in the corpus , number of unique words in the corpus)): \n",
-    "                Co-occurence matrix of word counts. \n",
-    "                The ordering of the words in the rows/columns should be the same as the ordering of the words given by the distinct_words function.\n",
-    "            word2ind (dict): dictionary that maps word to index (i.e. row/column number) for matrix M.\n",
-    "    \"\"\"\n",
-    "    words, n_words = distinct_words(corpus)\n",
-    "    M = None\n",
-    "    word2ind = {}\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    IMPLEMENT ME!\n",
-    "    \"\"\"\n",
+    "    Note:\n",
+    "    -----\n",
+    "        Each word in a document should be at the center of a window. Words near edges will have a smaller\n",
+    "        number of co-occurring words.\n",
+    "        \n",
+    "        For example, if we take the document \"<START> All that glitters is not gold <END>\" with window size of 4,\n",
+    "        \"All\" will co-occur with \"<START>\", \"that\", \"glitters\", \"is\", and \"not\".\n",
     "\n",
-    "    return M, word2ind"
+    "    Params:\n",
+    "    -------\n",
+    "        corpus (list of list of strings): corpus of documents\n",
+    "        window_size (int): size of context window\n",
+    "\n",
+    "    Return:\n",
+    "    -------\n",
+    "        M (a symmetric numpy matrix of shape (number of unique words in the corpus , number of unique words in the corpus)): \n",
+    "            Co-occurence matrix of word counts. \n",
+    "            The ordering of the words in the rows/columns should be the same as the ordering of the words given by the distinct_words function.\n",
+    "\n",
+    "        word2ind (dict): dictionary that maps word to index (i.e. row/column number) for matrix M.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    corpus_, n = distinct_words(corpus)\n",
+    "    M = np.zeros(shape = (n, n), dtype = np.uint8)\n",
+    "    word2ind = dict(zip(corpus_, range(n)))\n",
+    "    # print(corpus_, word2ind)\n",
+    "\n",
+    "    for center in range(n):\n",
+    "        for window in range(-window_size, window_size + 1):\n",
+    "\n",
+    "            # 'out-of-bounds' management\n",
+    "            if center + window > n: break\n",
+    "            if window == 0 or center - window < 0: continue\n",
+    "            \n",
+    "            # print(f'corpus_[center] = {corpus_[center]} :: corpus_[window] = {corpus_[window]}\\n')\n",
+    "            M[word2ind[corpus_[center]], word2ind[corpus_[window]]] += 1 # [r_start : r_end, c_start : c_end]\n",
+    "    \n",
+    "    M += M.T\n",
+    "    return M, word2ind\n",
+    "\n",
+    "s1 = \"{} All that glitters isn't gold {}\".format(START_TOKEN, END_TOKEN).split(\" \")\n",
+    "s2 = \"{} All's well that ends well {}\".format(START_TOKEN, END_TOKEN).split(\" \")\n",
+    "l = [s1, s2]\n",
+    "\n",
+    "M_test, word2ind_test = compute_co_occurrence_matrix(test_corpus, window_size = 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "id": "u-6ID1qhSSt7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct M:\n",
+      "[[0. 0. 0. 0. 0. 0. 1. 0. 0. 1.]\n",
+      " [0. 0. 1. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 1.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1. 1. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 1. 1. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 1. 1. 0. 0. 0. 1. 0.]]\n",
+      "Your M: \n",
+      "[[0 0 0 0 0 0 0 0 0 1]\n",
+      " [0 2 1 1 1 1 1 1 1 2]\n",
+      " [0 1 0 0 0 0 0 0 0 1]\n",
+      " [0 1 0 0 0 0 0 0 0 1]\n",
+      " [0 1 0 0 0 0 0 0 0 1]\n",
+      " [0 1 0 0 0 0 0 0 0 1]\n",
+      " [0 1 0 0 0 0 0 0 0 1]\n",
+      " [0 1 0 0 0 0 0 0 0 1]\n",
+      " [0 1 0 0 0 0 0 0 0 1]\n",
+      " [1 2 1 1 1 1 1 1 1 2]]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Incorrect count at index (0, 6)=(<END>, gold) in matrix M. Yours has 0 but should have 1.0.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[91], line 44\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYour M: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     43\u001b[0m             \u001b[38;5;28mprint\u001b[39m(M_test)\n\u001b[0;32m---> 44\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIncorrect count at index (\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m)=(\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m) in matrix M. Yours has \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m but should have \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(idx1, idx2, w1, w2, student, correct))\n\u001b[1;32m     46\u001b[0m \u001b[38;5;66;03m# Print Success\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m80\u001b[39m)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Incorrect count at index (0, 6)=(<END>, gold) in matrix M. Yours has 0 but should have 1.0."
+     ]
+    }
+   ],
    "source": [
     "# ---------------------\n",
     "# Run this sanity check\n",
